[gd_scene load_steps=4 format=2]

[ext_resource path="res://RaubFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 17.0
margin_right = 120.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( -69.406, 210.897 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 357.435
margin_top = 17.0
margin_right = 457.435
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 381.504
margin_top = 32.0
margin_right = 481.504
margin_bottom = 42.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 25.926
margin_top = 5.0
margin_right = 194.926
margin_bottom = 21.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "Flashlight battery"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 374.687
margin_top = 5.0
margin_right = 543.687
margin_bottom = 21.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "Mental health"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mental_health_ended" from="." to="." method="_on_HUD_mental_health_ended"]
